--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
             /* 제목 1 */
             h1 {
-                size: 10rem;
+                size: 16em;
             }
 
             /* 제목 2 */
