--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 
             /* 제목 1 */
             h1 {
-                size: 16em;
+                size: 30px;
             }
 
             /* 제목 2 */
             h2 {
-                size: 1.5rem;
+                size: 24px;
             }
 
             /* 제목 3 */
             h3 {
-                size: 1rem;
+                size: 20px;
             }
 
             /* 해설 */
@@ -27,7 +27,7 @@
                 font-family: inherit;
                 color: black;
                 background-color: rgb(231, 230, 230);
-                size: 0.5rem;
+                size: 16px;
             }
 
             /* 영어 문장 */
@@ -35,7 +35,7 @@
                 transition: background-color 0.3s, color 0.3s; /* 애니메이션 효과를 부드럽게 적용하기 위한 설정 */
                 font-family: Open Sans;
                 color: rgb(0, 112, 192);
-                size: 0.5rem;
+                size: 16px;
             }
 
             .audioText:hover {
@@ -50,7 +50,7 @@
             /* 해석 */
             .kor {
                 color: rgb(56, 56, 56);
-                size: 0.5rem;
+                size: 16px;
             }
         </style>
     </head>
