--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         </style>
     </head>
     <body>
+        <h1 style="size: 100px">샘플</h1>
+        <h1 style="size: 80px">샘플</h1>
+        <h1 style="size: 60px">샘플</h1>
+        <h1 style="size: 40px">샘플</h1>
         <h1>조동사 CAN</h1>
 
         <h2>1. 능력 (ability)</h2>
