--- a/index.html
+++ b/index.html
@@ -55,10 +55,21 @@
         </style>
     </head>
     <body>
-        <h1 style="font-size: 100px;">샘플</h1>
-        <h1 style="font-size: 80px;">샘플</h1>
-        <h1 style="font-size: 60px;">샘플</h1>
-        <h1 style="font-size: 40px;">샘플</h1>
+        <h1 style="font-size: 100px;">선천적이거나 후천적으로 어떤 일을 해낼 수 있는 신체적, 정신적인
+            능력을 나타낸다. 능력을 말할 때 주어는 대개 사람을 포함한
+            '유생적'(animate) 존재를 나타낸다.</h1>
+        <h1 style="font-size: 80px;">선천적이거나 후천적으로 어떤 일을 해낼 수 있는 신체적, 정신적인
+            능력을 나타낸다. 능력을 말할 때 주어는 대개 사람을 포함한
+            '유생적'(animate) 존재를 나타낸다.</h1>
+        <h1 style="font-size: 60px;">선천적이거나 후천적으로 어떤 일을 해낼 수 있는 신체적, 정신적인
+            능력을 나타낸다. 능력을 말할 때 주어는 대개 사람을 포함한
+            '유생적'(animate) 존재를 나타낸다.</h1>
+        <h1 style="font-size: 55px;">선천적이거나 후천적으로 어떤 일을 해낼 수 있는 신체적, 정신적인
+            능력을 나타낸다. 능력을 말할 때 주어는 대개 사람을 포함한
+            '유생적'(animate) 존재를 나타낸다.</h1>
+        <h1 style="font-size: 50px;">선천적이거나 후천적으로 어떤 일을 해낼 수 있는 신체적, 정신적인
+            능력을 나타낸다. 능력을 말할 때 주어는 대개 사람을 포함한
+            '유생적'(animate) 존재를 나타낸다.</h1>
         <h1>조동사 CAN</h1>
 
         <h2>1. 능력 (ability)</h2>
