--- a/modal.html
+++ b/modal.html
@@ -79,29 +79,26 @@
         </style>
     </head>
     <body>
-        <h1>실용 영문법 해설</h1>
+        <a href="index.html">MAIN</a>
+        <h1>05. 조동사</h1>
         <hr />
-        <a href="index.html">01. 명사</a>
-        <a href="index.html">02. 관사</a>
-        <a href="index.html">03. 대명사</a>
-        <a href="index.html">04. 동사</a>
-        <a href="modal.html">05. 조동사</a>
-        <a href="index.html">06. 시제</a>
-        <a href="index.html">07. 수동태</a>
-        <a href="index.html">08. 부정사절</a>
-        <a href="index.html">09. 동명사절</a>
-        <a href="index.html">10. 분사와 분사절</a>
-        <a href="index.html">11. 가정법</a>
-        <a href="index.html">12. 형용사</a>
-        <a href="index.html">13. 부사</a>
-        <a href="index.html">14. 전치사</a>
-        <a href="index.html">15. 등위구조</a>
-        <a href="index.html">16. 명사절 That절</a>
-        <a href="index.html">17. 관계사절</a>
-        <a href="index.html">18. 부사절</a>
-        <a href="index.html">19. 비교구문</a>
-        <a href="index.html">20. 문장의 유형</a>
-        <a href="index.html">21. 생략과 대용</a>
-        <a href="index.html">22. 화법</a>
+        <a href="can.html">01. CAN</a>
+        <a href="index.html">02. COULD</a>
+        <a href="index.html">03. CAN/COULD+현재완료</a>
+        <a href="index.html">04. MAY</a>
+        <a href="index.html">05. MIGHT</a>
+        <a href="index.html">06. MAY/MIGHT+현재완료</a>
+        <a href="index.html">07. MAY/MIGHT (AS) WELL</a>
+        <a href="index.html">08. MUST</a>
+        <a href="index.html">09. HAVE (GOT) TO</a>
+        <a href="index.html">10. SHOULD/OUGHT TO</a>
+        <a href="index.html">11. SHOULD/OUGHT TO+현재완료</a>
+        <a href="index.html">12. WILL</a>
+        <a href="index.html">13. WOULD</a>
+        <a href="index.html">14. SHALL</a>
+        <a href="index.html">15. USED TO</a>
+        <a href="index.html">16. HAD BETTER</a>
+        <a href="index.html">17. NEED</a>
+        <a href="index.html">18. DARE</a>
     </body>
 </html>
