--- a/can.html
+++ b/can.html
@@ -56,6 +56,7 @@
         </style>
     </head>
     <body>
+        <a href="index.html">MAIN</a>
         <h1>조동사 CAN</h1>
 
         <h2>1. 능력 (ability)</h2>
