--- a/can.html
+++ b/can.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <a href="index.html" style="font-size: 40px">MAIN</a>
-        <h1>조동사 CAN</h1>
+        <h1>CAN</h1>
 
         <h2>1. 능력 (ability)</h2>
 
