--- a/modal.html
+++ b/modal.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CAN</title>
+        <title>조동사</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
