--- a/can.html
+++ b/can.html
@@ -25,6 +25,7 @@
         <p class="kor">
             자전거를 잘 타는 사람은 하루에 백 마일 이상의 거리를 달릴 수 있어요.
         </p>
+        <p class="word">cyclist: 사이클 선수</p>
 
         <p class="audioText" onclick="playAudio(1)">
             Only tough breeds of sheep can live in the mountains.
