--- a/index.html
+++ b/index.html
@@ -7,27 +7,15 @@
     <body>
         <h1>실용 영문법 해설</h1>
         <hr />
-        <a href="index.html">01. 명사</a>
-        <a href="index.html">02. 관사</a>
-        <a href="index.html">03. 대명사</a>
-        <a href="index.html">04. 동사</a>
-        <a href="modal.html">05. 조동사</a>
-        <a href="index.html">06. 시제</a>
-        <a href="index.html">07. 수동태</a>
-        <a href="index.html">08. 부정사절</a>
-        <a href="index.html">09. 동명사절</a>
-        <a href="index.html">10. 분사와 분사절</a>
-        <a href="index.html">11. 가정법</a>
-        <a href="index.html">12. 형용사</a>
-        <a href="index.html">13. 부사</a>
-        <a href="index.html">14. 전치사</a>
-        <a href="index.html">15. 등위구조</a>
-        <a href="index.html">16. 명사절 That절</a>
-        <a href="index.html">17. 관계사절</a>
-        <a href="index.html">18. 부사절</a>
-        <a href="index.html">19. 비교구문</a>
-        <a href="index.html">20. 문장의 유형</a>
-        <a href="index.html">21. 생략과 대용</a>
-        <a href="index.html">22. 화법</a>
+        <table>
+            <tr>
+                <td>
+                    <span class="contents">001</span>
+                </td>
+                <td>
+                    <a class="contents" href="001.html">DO의 강조 용법</a>
+                </td>
+            </tr>
+        </table>
     </body>
 </html>
