--- a/003.html
+++ b/003.html
@@ -37,6 +37,7 @@
         <audio id="audioPlayer5" src="./mp3/003_005.mp3"></audio>
         <p class="kor">그 아이는 열 살이지만, 아직도 글을 읽지 못한다.</p>
         <p class="exp"></p>
+        <p class="exp">다음과 같은 예에서는 무생물이 주어 역할을 하고 있다.</p>
         <p class="audioText" onclick="playAudio(5)">
             This machine <b>can</b> print 60 pages in a minute.
         </p>
@@ -48,6 +49,7 @@
         <audio id="audioPlayer7" src="./mp3/003_007.mp3"></audio>
         <p class="kor">분명히 이러한 자선은 아직도 상당히 많은 사람들에게 호소력을 가질 수 있다.</p>
         <p class="exp"></p>
+        <p class="exp">이러한 뜻으로 쓰일 때 can은 be able to, be capable of, know how to 따위의 보충어구를 갖는다. 특히 know/learn how to는 학습된 영속적인 능력을 나타내는데, drive, play, speak, understand 따위와 같은 동사들이 주로 이러한 구조에 쓰인다.</p>
         <p class="audioText" onclick="playAudio(7)">
             <b>Can</b> you drive a car?
         </p>
@@ -72,6 +74,8 @@
         </p>
         <audio id="audioPlayer12" src="./mp3/003_012.mp3"></audio>
         <p class="kor">그 항구는 연간 천만 톤의 석탄을 처리할 능력이 있다.</p>
+        <p class="exp"></p>
+        <p class="exp">다음 예에서는 can이 주어가 현재 특정한 상황에 놓여 있는데서 비롯된 능력을 나타낸다. 따라서 이런 경우에 can은 'be in a position to do …'로 풀어 쓸 수 있다. <b>→ 즉, 현재 상황으로 인해 비롯된 능력</b></p>
         <p class="audioText" onclick="playAudio(12)">
             <b>Can</b> you come to the meeting tomorrow?
         </p>
@@ -91,6 +95,8 @@
         </p>
         <audio id="audioPlayer16" src="./mp3/003_016.mp3"></audio>
         <p class="kor">여러분은 타인의 자유를 보호해 주는 경우에만 자신의 자유를 보호할 수 있다.</p>
+        <p class="exp"></p>
+        <p class="exp">이와는 달리, 능력 그 자체가 미래의 어느 시기에 갖게 되는 경우, 즉 주어가 지금은 언급된 행위를 할 능력을 갖고 있지 않지만, 장차 그 능력을 갖게 될 것이라고 하는 경우에는 will be able to가 쓰인다. 설령 미래의 능력이지만, 현재 그 행위가 확정적일 경우에는 대개 can이 쓰인다.</p>
         <p class="audioText" onclick="playAudio(16)">
             In a few decades man <b>will be able to</b> land on Mars.
         </p>
@@ -109,6 +115,7 @@
         <audio id="audioPlayer19" src="./mp3/003_019.mp3"></audio>
         <p class="kor">나중에 세부적인 사항을 논의할 수 있다.</p>
         <p class="word">장차 세부적인 사항을 논의할 것으로 현재 확정되어 있음을 암시함.</p>
+        <p class="exp"></p>
         <h2>2. 가능성 (possibility)</h2>
         <p class="audioText" onclick="playAudio(19)">
             A high cholesterol level in the blood <b>can</b> cause heart disease.
@@ -135,6 +142,9 @@
         </p>
         <audio id="audioPlayer24" src="./mp3/003_024.mp3"></audio>
         <p class="kor">가끔 비상사태가 발생한다. 이러한 사태는 적절한 시기에 적절한 조치를 취하지 않으면 재앙을 가져올 수도 있다. (이론적 가능성)</p>
+        <p class="exp"></p>
+        <p class="exp"><u>특히 이러한 can은 긍정문에서 이론적 가능성(theoretical possibility)을 나타낸다. 즉, 어떤 사건이 일어날 수 있는 원인을 제공해 줄 수 있는 특정한 상황이 현재 존재하지 않더라도 적어도 이론적으로는 어떤 사건이 일어날 가능성을 배제하지 않는다는 뜻을 나타낸다. 그러므로 can이 갖는 이론적 가능성은 may가 나타내는 사실적 가능성보다 진술된 사건이 발생할 가능성이 약하다.</u></p>
+        <p class="exp">이론적 가능성을 나타내는 can이 포함된 문장을 'It is possible (for …) to .…'로 풀어 쓸 수 있다.</p>
         <p class="audioText" onclick="playAudio(24)">
             Vitamin deficiency <b>can</b> lead to illness.
         </p>
@@ -145,6 +155,8 @@
         <audio id="audioPlayer26" src="./mp3/003_026.mp3"></audio>
         <p class="kor">비타민 결핍이 질병을 불러올 수도 있다. (이론적 가능성)</p>
         <p class="word">반드시 그렇다고는 할 수 없을 지라도 적어도 비타민 결핍으로 질병에 걸릴 가능성은 있다는 뜻임.</p>
+        <p class="exp"></p>
+        <p class="exp">의문문과 부정문에서는 이론적 가능성을 나타내지 않고, 오히려 어떤 사건이 일어날 <b>사실적 가능성(factual possibility)</b>에 대한 강한 의심이나 부정의 뜻을 나타낸다.</p>
         <p class="audioText" onclick="playAudio(26)">
             Who <b>can</b> that be at the door? <b>Can</b> it be Susan?
         </p>
@@ -168,6 +180,8 @@
         </p>
         <audio id="audioPlayer31" src="./mp3/003_031.mp3"></audio>
         <p class="kor">그가 이 시간에 일하고 있지 않을 거야! (사실적 가능성에 대한 강한 의심/부정)</p>
+        <p class="exp"></p>
+        <p class="exp">can이 가끔 일어나는 특징적인 경향을 나타내기도 한다. 즉, 보통 often이 나 sometimes와 같은 빈도부사를 동반해서 주어에게서 가끔 어떤 성질이나 상황이 발생한다는 뜻을 나타낸다.</p>
         <p class="audioText" onclick="playAudio(31)">
             It <b>can</b> be quite cold in Cairo in January.
         </p>
@@ -192,13 +206,17 @@
         </p>
         <audio id="audioPlayer36" src="./mp3/003_036.mp3"></audio>
         <p class="kor">이곳은 밤에 아주 추울 때도 있습니다.</p>
+        <p class="exp"></p>
+        <p class="exp">일반적으로 이러한 뜻을 나타내는 경우에는 be 동사의 보어로서 대개 unkind, destructive, cold 따위와 같은 부정적인 뜻을 나타내는 형용사들이 쓰여 달갑지 못한 효과를 나타내지만, 다음 예에서처럼 긍정적인 뜻을 나타내는 형용사가 쓰이더라도 나타내는 효과는 마찬가지이다. 특히 주어가 사람일 때에는 가끔 나타나는 특성이 일반적으로 부정적이다.</p>
         <p class="audioText" onclick="playAudio(36)">
             She <b>can</b> look attractive when she wants to.
         </p>
         <audio id="audioPlayer37" src="./mp3/003_037.mp3"></audio>
         <p class="kor">원하는 경우에는 그녀가 예뻐 보일 때도 있다.</p>
         <p class="word">대개 예쁘지 않다는 점을 암시함.</p>
+        <p class="exp"></p>
         <h2>허가 (permission)</h2>
+        <p class="exp">허가(permission)를 나타낸다. 즉, 진술된 어떤 행위를 할 수 있도록 허가를 요청하거나 그 행위를 할 수 있도록 허가를 할 때, 또는 부정문에서는 허가의 금지를 나타낸다.</p>
         <p class="audioText" onclick="playAudio(37)">
             You <b>can</b> go now if you want to.
         </p>
@@ -214,6 +232,8 @@
         </p>
         <audio id="audioPlayer40" src="./mp3/003_040.mp3"></audio>
         <p class="kor">여기서는 담배를 피우지 못해.</p>
+        <p class="exp"></p>
+        <p class="exp"><u>특히 구어영어에서는 허가를 나타낼 때 can이 may보다 더 많이 사용된다. 그 까닭은 can이 허가의 주체가 나타나지 않을 뿐만 아니라, may보다 덜 격식적이라고 느껴지기 때문이다.</u></p>
         <p class="audioText" onclick="playAudio(40)">
             You <b>can</b> keep the book indefinitely.
         </p>
@@ -239,6 +259,8 @@
         </p>
         <audio id="audioPlayer45" src="./mp3/003_045.mp3"></audio>
         <p class="kor">미국에는 1쿼트의 술과 담배 열 갑을 세금 없이 갖고 들어올 수 있습니다.</p>
+        <p class="exp"></p>
+        <p class="exp">can은 항상 장차 어떤 일이 이루어질 수 있는 현재의 허가를, 나타낸다. 그러나 아직 어떤 허가가 주어지지 않고 미래의 어느 시점에 도달했을 때 비로소 이루어질 허가일 경우나, 다른 법조동사 뒤에서는 be allowed to, be permitted to(보다 격식적임)를 사용한다.</p>
         <p class="audioText" onclick="playAudio(45)">
             I don't think we <b>will be allowed to</b> leave early today.
         </p>
